# savings-tracker-service-auth-handler

./: .env.example  .env.test  .gitignore  Cargo.toml  README.md  build.sh  dependency-reduced-pom.xml  drizzle.config.ts  febiflow  jest.config.js  package-lock.json  package.json  pom.xml  samconfig.toml  serverless.yml  template.yaml  tsconfig.json
core/: pom.xml
core/action/: Cargo.toml
core/bootstrap/src/: lambda_wrapper.rs
core/config/: Cargo.toml
core/config/src/: env.rs
core/dto/: Cargo.toml
core/dto/src/: lib.rs
core/dto/src/repositories/: mod.rs  user_pg_repository_dto.rs
core/dto/src/requests/: login_request.rs  mod.rs
core/error/: Cargo.toml
core/error/src/: error.rs  lib.rs
core/repository/: Cargo.toml
core/repository/src/: lib.rs  user_pg_repository.rs
drizzle/: 0000_loose_terrax.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
handler/login/: Cargo.toml
handler/login/src/: main.rs
handler/refresh_token/: Cargo.toml
handler/refresh_token/src/: main.rs
handlers/login/: pom.xml
src/: app.ts  container.ts  server.ts
src/config/: database.ts  json-web-token.ts
src/core/repositories/: user-repository.ts
src/core/use-cases/: login-user.ts  register-user.ts
src/infrastructure/database/: drizzle.ts
src/infrastructure/database/repositories/: user-repository.ts
src/infrastructure/database/schema/: user.table.ts
src/main/resources/: .gitignore  application.properties  application.properties.example
src/presentation/http/controllers/: auth-controller.ts
src/presentation/middleware/: validate.ts
src/presentation/validators/: login-validator.ts
src/shared/enums/: token-type.ts
src/shared/errors/: invalid-credentials-error.ts
src/shared/utils/: jwt.ts
tests/e2e/: notes.md
tests/fixtures/user/: index.ts  new-user-valid.ts  user-valid.ts
tests/integration/: auth-controller.test.ts
tests/mocks/: user-repository.mock.ts
tests/unit/repositories/: user-repository.test.ts
(+53 files in other folders)
