[package]
name = "login"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.0"
ferrum = { git = "https://github.com/febiflow/framework", branch = "release/v0.1.0" }
lambda_http = "0.14.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
validator = { version = "0.20", features = ["derive"] }

dto = { path = "../../core/dto" }
