[package]
name = "login"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = { workspace = true }
dotenvy = { workspace = true }
dto = { workspace = true }
febiflow = { workspace = true }
lambda_http = { workspace = true }
repository = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
validator = { workspace = true }

